<resources>
    <string name="app_name">b.fast(fattorino)</string>
    <string name="BFast">BFast</string>
    <string name="button">button</string>
    <string name="todo">todo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="password_dimenticata"><u>Password dimenticata?</u></string>
    <string name="vuoi_candidarti"><u>Vuoi candidarti?</u></string>
    <string name="id">ID</string>
    <string name="logout">Logout</string>
    <string name="il_mio_profilo">Il Mio Profilo</string>
    <string name="chiedi_aiuto">Chiedi Aiuto</string>
    <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>
    <string name="user_location_permission_explanation">user_location_permission_explanation</string>
    <string name="mapbox_marker_icon_default">mapbox_marker_icon_default</string>

    <style name="NavigationMapRoute">
        <!-- Colors -->
        <item name="routeColor">@color/mapboxBlue</item>
        <item name="routeModerateCongestionColor">@color/mapboxYellow</item>
        <item name="routeSevereCongestionColor">@color/mapboxPink</item>
        <item name="routeShieldColor">@color/mapboxWhite</item>
        <!-- Scales -->
        <item name="routeScale">1.0</item>
    </style>

    <style name="NavigationView" parent="Theme.AppCompat.NoActionBar">
        <item name="navigationViewPrimary">@color/mapboxWhite</item>
        <item name="navigationViewSecondary">@color/mapboxBlue</item>
        <item name="navigationViewAccent">@color/mapboxPink</item>
    </style>
</resources>
